modified validation update
