# app/Http/Controllers/Controller.php
@@ -7,16 +7,27 @@ use Illuminate\Foundation\Bus\DispatchesJobs;
 use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
 
+
 /**
- * @OA\Info(
- *      version="1.0.0",
- *      title="Management of a customer's agenda",
- *      description="Likeu technical test, api creation",
- *      @OA\Contact(
- *          email="alejandro.valencia3@utp.edu.co"
- *      ),
- * )
- */
+* @OA\Info(title=" API Management of a customer's agenda", version="1.0", description="Likeu technical test, api creation."),
+* @OA\SecurityScheme(
+*      securityScheme="bearerAuth",
+*      in="header",
+*      name="bearerAuth",
+*      type="http",
+*      scheme="bearer",
+*      bearerFormat="JWT",
+* ),
+* @OA\Tag(
+*     name="AGENDA",
+*     description="Agenda requests",
+* ),
+* @OA\Tag(
+*     name="USER",
+*     description="User requests",
+* )
+*/
+
 class Controller extends BaseController
 {
     use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
